bg-yellow class

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -20,6 +20,10 @@
     .listing-item-inner h3 {
       text-transform: capitalize;
     }
+
+    .bg-yellow {
+      background: #fffffa !important;
+    }
   </style>
 </head>
 
@@ -194,18 +198,14 @@
 
 </header>
 <div class="clearfix"></div>
-<!-- Header Container / End -->
 
 
-<!-- Content
-================================================== -->
 <div class="fs-container">
 
 	<div class="fs-inner-container content">
 		<div class="fs-content">
 
-			<!-- Search -->
-			<section class="search">
+			<section class="search bg-yellow">
 
 				<div class="row">
 					<div class="col-md-12">
@@ -405,10 +405,7 @@
 
 				<a href="pages-blog-post.html" class="read-more">Read More <i class="fa fa-angle-right"></i></a>
 			</div>
-
 		</div>
-
-
 	</div>
 </div>
 
