--- a/views/list.mustache
+++ b/views/list.mustache
@@ -351,7 +351,7 @@
 				{{#templates}}
 				<div class="col-lg-12 col-md-12">
 					<div class="listing-item-container list-layout">
-						<a id="{{index}}" href="#" class="listing-item">
+						<a href="#" class="listing-item template-preview" id="{{index}}">
 
 							<div class="listing-item-image">
 								<img src="{{image}}=s360-c" alt="">
