--- a/views/list.mustache
+++ b/views/list.mustache
@@ -378,7 +378,7 @@
 
 			<div class="row fs-listings">
 				<div class="col-md-12">
-					<div class="copyrights margin-top-0">&copy; 2019 Vertext 360. All Rights Reserved.</div>
+					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertext 360. All Rights Reserved.</div>
 				</div>
 			</div>
 		</section>
