wider template image

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -396,7 +396,7 @@
 
 <script type="text/template" id="tpl-selected-template">
   <div class="post-content">
-    <img src="<% image %>" alt="">
+    <img src="<% image %>=s1024" alt="">
     <h3 style="margin-top:20px"><a href="#"><% name %></a></h3>
     <ul class="post-meta">
       <li>August 18, 2017</li>
