remove check mark

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -360,7 +360,7 @@
 							<div class="listing-item-content">
 
 								<div class="listing-item-inner">
-									<h3>{{name}} <i class="verified-icon"></i></h3>
+									<h3>{{name}}</h3>
 									<span>{{template.category}}</span>
 									<div class="star-rating" data-rating="3.5">
 										<div class="rating-counter">(12 reviews)</div>
