--- a/views/list.mustache
+++ b/views/list.mustache
@@ -206,182 +206,51 @@
 		<div class="fs-content">
 
 			<section class="search bg-yellow">
-
-				<div class="row">
-					<div class="col-md-12">
-
-							<!-- Row With Forms -->
-							<div class="row with-forms">
-
-								<!-- Main Search Input -->
-								<div class="col-fs-6">
-									<div class="input-with-icon">
-										<i class="sl sl-icon-magnifier"></i>
-										<input type="text" placeholder="What are you looking for?" value=""/>
-									</div>
-								</div>
-
-								<!-- Main Search Input -->
-								<div class="col-fs-6">
-									<div class="input-with-icon location">
-										<div id="autocomplete-container">
-											<input type="text" placeholder="Location">
-										</div>
-									</div>
-								</div>
-
-
-								<!-- Filters -->
-								<div class="col-fs-12">
-
-									<!-- Panel Dropdown / End -->
-									<div class="panel-dropdown">
-										<a href="#">Categories</a>
-										<div class="panel-dropdown-content checkboxes categories">
-
-											<!-- Checkboxes -->
-											<div class="row">
-												<div class="col-md-6">
-													<input id="check-1" type="checkbox" name="check" checked class="all">
-													<label for="check-1">All Categories</label>
-
-													<input id="check-2" type="checkbox" name="check">
-													<label for="check-2">Shops</label>
-
-													<input id="check-3" type="checkbox" name="check">
-													<label for="check-3">Hotels</label>
-												</div>
-
-												<div class="col-md-6">
-													<input id="check-4" type="checkbox" name="check" >
-													<label for="check-4">Eat & Drink</label>
-
-													<input id="check-5" type="checkbox" name="check">
-													<label for="check-5">Fitness</label>
-
-													<input id="check-6" type="checkbox" name="check">
-													<label for="check-6">Events</label>
-												</div>
-											</div>
-
-											<!-- Buttons -->
-											<div class="panel-buttons">
-												<button class="panel-cancel">Cancel</button>
-												<button class="panel-apply">Apply</button>
-											</div>
-
-										</div>
-									</div>
-									<!-- Panel Dropdown / End -->
-
-									<!-- Panel Dropdown -->
-									<div class="panel-dropdown wide">
-										<a href="#">More Filters</a>
-										<div class="panel-dropdown-content checkboxes">
-
-											<!-- Checkboxes -->
-											<div class="row">
-												<div class="col-md-6">
-													<input id="check-a" type="checkbox" name="check">
-													<label for="check-a">Elevator in building</label>
-
-													<input id="check-b" type="checkbox" name="check">
-													<label for="check-b">Friendly workspace</label>
-
-													<input id="check-c" type="checkbox" name="check">
-													<label for="check-c">Instant Book</label>
-
-													<input id="check-d" type="checkbox" name="check">
-													<label for="check-d">Wireless Internet</label>
-												</div>
-
-												<div class="col-md-6">
-													<input id="check-e" type="checkbox" name="check" >
-													<label for="check-e">Free parking on premises</label>
-
-													<input id="check-f" type="checkbox" name="check" >
-													<label for="check-f">Free parking on street</label>
-
-													<input id="check-g" type="checkbox" name="check">
-													<label for="check-g">Smoking allowed</label>
-
-													<input id="check-h" type="checkbox" name="check">
-													<label for="check-h">Events</label>
-												</div>
-											</div>
-
-											<!-- Buttons -->
-											<div class="panel-buttons">
-												<button class="panel-cancel">Cancel</button>
-												<button class="panel-apply">Apply</button>
-											</div>
-
-										</div>
-									</div>
-									<!-- Panel Dropdown / End -->
-
-									<!-- Panel Dropdown -->
-									<div class="panel-dropdown">
-										<a href="#">Distance Radius</a>
-										<div class="panel-dropdown-content">
-											<input class="distance-radius" type="range" min="1" max="100" step="1" value="50" data-title="Radius around selected destination">
-											<div class="panel-buttons">
-												<button class="panel-cancel">Disable</button>
-												<button class="panel-apply">Apply</button>
-											</div>
-										</div>
-									</div>
-									<!-- Panel Dropdown / End -->
-
-								</div>
-								<!-- Filters / End -->
-
-							</div>
-							<!-- Row With Forms / End -->
-
-					</div>
-				</div>
+        <h2>Professional Websites. Fast.</h2>
+        <p>
+          Create fully-featured professional websites in minutes. Select a template
+          below to get started.
+        </p>
 
 			</section>
-			<!-- Search / End -->
 
-		<section class="listings-container margin-top-30">
-			<div class="row fs-listings">
+  		<section class="listings-container margin-top-30">
+  			<div class="row fs-listings">
 
-				{{#templates}}
-				<div class="col-lg-12 col-md-12">
-					<div class="listing-item-container list-layout">
-						<a href="#" class="listing-item template-preview" id="{{index}}">
+  				{{#templates}}
+  				<div class="col-lg-12 col-md-12">
+  					<div class="listing-item-container list-layout">
+  						<a href="#" class="listing-item template-preview" id="{{index}}">
 
-							<div class="listing-item-image">
-								<img src="{{image}}=s360-c" alt="">
-							</div>
+  							<div class="listing-item-image">
+  								<img src="{{image}}=s360-c" alt="">
+  							</div>
 
-							<div class="listing-item-content">
+  							<div class="listing-item-content">
 
-								<div class="listing-item-inner">
-									<h3>{{name}}</h3>
-									<span>{{template.category}}</span>
-									<div class="star-rating" data-rating="3.5">
-										<div class="rating-counter">(12 reviews)</div>
-									</div>
-								</div>
+  								<div class="listing-item-inner">
+  									<h3>{{name}}</h3>
+  									<span>{{template.category}}</span>
+  									<div class="star-rating" data-rating="3.5">
+  										<div class="rating-counter">(12 reviews)</div>
+  									</div>
+  								</div>
 
-								<span class="like-icon"></span>
-							</div>
-						</a>
-					</div>
-				</div>
-        {{/templates}}
+  								<span class="like-icon"></span>
+  							</div>
+  						</a>
+  					</div>
+  				</div>
+          {{/templates}}
 
-			</div>
+  			</div>
 
-			<div class="row fs-listings">
-				<div class="col-md-12">
-					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertext 360. All Rights Reserved.</div>
-				</div>
-			</div>
-		</section>
+  			<div class="row fs-listings">
+  				<div class="col-md-12">
+  					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertext 360. All Rights Reserved.</div>
+  				</div>
+  			</div>
+  		</section>
 
 		</div>
 	</div>
