--- a/views/list.mustache
+++ b/views/list.mustache
@@ -25,11 +25,20 @@
       background: #fffffa !important;
     }
 
+    .profile-row {
+      margin-top: 16px;
+    }
+
+    .profile-row span {
+      margin-top: 2px;
+      font-size: 12px;
+    }
+
     .profile-icon {
-      float:left;
-      width:32px !important;
-      border-radius:50% !important;
-      margin-right:4px;
+      float: left;
+      width: 28px !important;
+      border-radius: 50% !important;
+      margin-right: 4px;
     }
   </style>
 </head>
@@ -238,9 +247,9 @@
   								<div class="listing-item-inner">
   									<h3>{{name}}</h3>
   									<span>{{template.category}}</span>
-                    <div>
+                    <div class="profile-row">
                       <img class="profile-icon" src="{{profile.image}}=s64-c" />
-  										<span style="margin-top:2px">{{profile.username}}</span>
+  										<span>{{profile.username}}</span>
   									</div>
   								</div>
 
@@ -249,12 +258,11 @@
   					</div>
   				</div>
           {{/templates}}
-
   			</div>
 
   			<div class="row fs-listings">
   				<div class="col-md-12">
-  					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertext 360. All Rights Reserved.</div>
+  					<div style="text-align:left" class="copyrights margin-top-0">&copy; 2019 Vertex 360. All Rights Reserved.</div>
   				</div>
   			</div>
   		</section>
