show profile username and clone price

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -284,8 +284,8 @@
     <h3 style="margin-top:20px"><a href="#"><% name %></a></h3>
     <ul class="post-meta">
       <li>August 18, 2017</li>
-      <li><a href="#">Tips</a></li>
-      <li><a href="#">7 Comments</a></li>
+      <li><a href="#"><% profile.username %></a></li>
+      <li><a href="#">Free</a></li>
     </ul>
     <p><% description %></p>
     <a href="#" class="read-more">Use This Template <i class="fa fa-angle-right"></i></a>
