max heigh of 160

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -40,6 +40,10 @@
       border-radius: 50% !important;
       margin-right: 4px;
     }
+
+    .template-preview {
+      max-height: 160px !important;
+    }
   </style>
 </head>
 
