--- a/views/list.mustache
+++ b/views/list.mustache
@@ -292,15 +292,15 @@
 
 <script type="text/template" id="tpl-selected-template">
   <div class="post-content selected-template">
-    <img src="<% image %>=s1024" alt="">
+    <img src="<% image %>=s1024" alt="Vertex 360">
     <h3><a class="capitalize" href="#"><% name %></a></h3>
     <ul class="post-meta">
-      <li>August 18, 2017</li>
+      <li><% template.category %></li>
       <li><% profile.username %></li>
       <li>Free</li>
     </ul>
     <p><% description %></p>
-    <a href="#" class="button with-icon popup-with-zoom-anim">Use This Template <i class="fa fa-angle-right"></i></a>
+    <a href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Use This Template <i class="fa fa-angle-right"></i></a>
   </div>
 </script>
 
