--- a/views/list.mustache
+++ b/views/list.mustache
@@ -340,6 +340,9 @@
           event.preventDefault()
 
         var template = templates[this.id]
+        if (template.id == selected.id)
+          return
+          
         selected = template
         reloadUI()
       })
