--- a/views/list.mustache
+++ b/views/list.mustache
@@ -80,55 +80,17 @@
 					</button>
 				</div>
 
-				<nav id="navigation" class="style-1">
-					<ul id="responsive">
-
-						<li><a href="#">Home</a>
-							<ul>
-								<li><a href="index.html">Home 1</a></li>
-								<li><a href="index-2.html">Home 2</a></li>
-								<li><a href="index-3.html">Home 3</a></li>
-								<li><a href="index-4.html">Home 4</a></li>
-							</ul>
-						</li>
-
-						<li><a class="current" href="#">Listings</a>
-							<ul>
-								<li><a href="#">List Layout</a>
-									<ul>
-										<li><a href="listings-list-with-sidebar.html">With Sidebar</a></li>
-										<li><a href="listings-list-full-width.html">Full Width</a></li>
-										<li><a href="listings-list-full-width-with-map.html">Full Width + Map</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Grid Layout</a>
-									<ul>
-										<li><a href="listings-grid-with-sidebar-1.html">With Sidebar 1</a></li>
-										<li><a href="listings-grid-with-sidebar-2.html">With Sidebar 2</a></li>
-										<li><a href="listings-grid-full-width.html">Full Width</a></li>
-										<li><a href="listings-grid-full-width-with-map.html">Full Width + Map</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Half Screen Map</a>
-									<ul>
-										<li><a href="listings-half-screen-map-list.html">List Layout</a></li>
-										<li><a href="listings-half-screen-map-grid-1.html">Grid Layout 1</a></li>
-										<li><a href="listings-half-screen-map-grid-2.html">Grid Layout 2</a></li>
-									</ul>
-								</li>
-								<li><a href="listings-single-page.html">Single Listing 1</a></li>
-								<li><a href="listings-single-page-2.html">Single Listing 2</a></li>
-							</ul>
-						</li>
-
-					</ul>
-				</nav>
-				<div class="clearfix"></div>
 
 			</div>
 
 			<div class="right-side">
 				<div class="header-widget">
+          <nav id="navigation" class="style-1">
+  					<ul id="responsive">
+  						<li><a href="/">Home</a></li>
+  						<li><a class="current" href="#">How It Works</a></li>
+  					</ul>
+  				</nav>
 					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Log In <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
 				</div>
 			</div>
