link to example

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -266,6 +266,7 @@
       <li class="capitalize"><% template.category %></li>
       <li><% profile.username %></li>
       <li class="capitalize">Free</li>
+      <li><a target="_blank" href="https://<% slug %>.vertex360.co/">Example</a></li>
     </ul>
     <hr />
     <p>
