--- a/views/list.mustache
+++ b/views/list.mustache
@@ -266,7 +266,10 @@
       <li class="capitalize"><% template.category %></li>
       <li><% profile.username %></li>
       <li class="capitalize">Free</li>
-      <li><a target="_blank" href="https://<% slug %>.vertex360.co/">Example</a></li>
+      <li>
+        <a target="_blank" href="https://<% slug %>.vertex360.co/">Example</a>
+        <i class="sl sl-icon-share-alt" style="padding-left:4px"></i>
+      </li>
     </ul>
     <hr />
     <p>
