green text for hyperlink

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -267,8 +267,8 @@
       <li><% profile.username %></li>
       <li class="capitalize">Free</li>
       <li>
-        <a target="_blank" href="https://<% slug %>.vertex360.co/">Example</a>
-        <i class="sl sl-icon-share-alt" style="padding-left:4px"></i>
+        <a target="_blank" href="https://<% slug %>.vertex360.co" style="color:#37b6bd;">Example</a>
+        <i class="sl sl-icon-share-alt" style="padding-left:4px;color:#37b6bd;"></i>
       </li>
     </ul>
     <hr />
