set home as current in nav bar

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -94,8 +94,8 @@
 				<div class="header-widget">
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
-  						<li><a href="/">Home</a></li>
-  						<li><a class="current" href="#">How It Works</a></li>
+  						<li><a class="current" href="/">Home</a></li>
+  						<li><a href="#">How It Works</a></li>
   					</ul>
   				</nav>
 					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">Log In <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
