--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -1,4 +1,4 @@
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-</head>
+<title>Vertex 360 | Professional Websites. Fast.</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
