no right padding

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -75,7 +75,7 @@
 
   							<div class="listing-item-content">
 
-  								<div class="listing-item-inner">
+  								<div class="listing-item-inner" style="padding-right:0px">
   									<h3>{{name}}</h3>
   									<span>{{template.category}}</span>
                     <div class="profile-row">
