my account button

--- a/views/list.mustache
+++ b/views/list.mustache
@@ -229,7 +229,7 @@
       })
     }
     else {
-      $('#login-container').html('<a href="/me" class="button">Welcome '+user.username+'</a>')
+      $('#login-container').html('<a href="/me" class="button">My Account</a>')
     }
 
     var reloadUI = function(){
