--- a/views/list.mustache
+++ b/views/list.mustache
@@ -131,9 +131,13 @@
     <%/images %>
 
     <div id="launch-template-container">
-      <div id="btn-launch-container">
-        <input id="input-site-name" type="text" placeholder="Your Site Name" />
-        <a style="margin-top:20px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+      <div class="row" id="btn-launch-container">
+        <div class="col-md-6">
+          <input id="input-site-name" type="text" placeholder="Your Site Name" />
+        </div>
+        <div class="col-md-6">
+          <a style="margin-top:20px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+        </div>
       </div>
     </div>
 
