--- a/views/list.mustache
+++ b/views/list.mustache
@@ -130,6 +130,8 @@
     <div class="screenshot"><img src="<% . %>" /></div>
     <%/images %>
 
+    <hr />
+    <p>Launch this template on your account.</p>
     <div id="launch-template-container">
       <div class="row" id="btn-launch-container">
         <div class="col-md-6">
