--- a/views/list.mustache
+++ b/views/list.mustache
@@ -131,7 +131,7 @@
     <%/images %>
 
     <hr />
-    <p>Launch this template on your account.</p>
+    <p style="margin-bottom:16px">Launch this template on your account.</p>
     <div id="launch-template-container">
       <div class="row" id="btn-launch-container">
         <div class="col-md-6">
