--- a/views/list.mustache
+++ b/views/list.mustache
@@ -133,9 +133,13 @@
     <hr />
     <p style="margin-bottom:16px">Launch this template on your account.</p>
     <div id="launch-template-container">
-      <input id="input-site-name" type="text" placeholder="Your Site Name" />
-      <div id="btn-launch-container">
-        <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+      <div class="row">
+        <div class="col-md-6">
+          <input id="input-site-name" type="text" placeholder="Your Site Name" />
+        </div>
+        <div class="col-md-6" id="btn-launch-container">
+          <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
+        </div>
       </div>
     </div>
 
