--- a/views/list.mustache
+++ b/views/list.mustache
@@ -134,7 +134,7 @@
     <p style="margin-bottom:16px">Launch this template on your account.</p>
     <div id="launch-template-container" style="width:50%">
       <input id="input-site-name" type="text" placeholder="Your Site Name" />
-      <div class="col-md-6" id="btn-launch-container">
+      <div id="btn-launch-container">
         <a style="margin-top:4px" id="btn-clone-template" href="#" class="button with-icon">Use This Template <i class="fa fa-angle-right"></i></a>
       </div>
     </div>
