--- a/views/list.mustache
+++ b/views/list.mustache
@@ -212,17 +212,17 @@
       }
 
       $('#btn-launch-container').html("<img style='width:100px' src='https://storage.turbo360.co/vertex360-cms-4hujkc/loader.gif' /><br /><em>Launching your site...</em>")
-      // postRequest('/account/launch-template', body, function(err, response){
-      //   if (err){
-      //     alert('Error: ' + err.message)
-      //     return
-      //   }
-      //
-      // // console.log('SITE LAUNCHED: ' + JSON.stringify(response))
-      //   setTimeout(function(){
-      //     checkTemplate(response.data.slug)
-      //   }, 4000)
-      // })
+      postRequest('/account/launch-template', body, function(err, response){
+        if (err){
+          alert('Error: ' + err.message)
+          return
+        }
+
+      // console.log('SITE LAUNCHED: ' + JSON.stringify(response))
+        setTimeout(function(){
+          checkTemplate(response.data.slug)
+        }, 4000)
+      })
     }
 
     if (user == null){
