--- a/views/account.mustache
+++ b/views/account.mustache
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
+  {{>head}}
 </head>
 
-<body style="padding-top:70px">
+<body>
+
+<div id="wrapper">
   {{>nav}}
 
-	<div class="row">
-		<div class="col-md-2 col-md-offset-2">
-			<h1>Account</h1>
-			<hr />
-      <p>
-        {{user.username}}<br />
-        {{user.email}}<br />
-        <a href="/account/logout">Log Out</a>
-      </p>
+<div class="clearfix"></div>
+
+<div id="dashboard">
+	<a href="#" class="dashboard-responsive-nav-trigger">
+    <i class="fa fa-reorder"></i> Dashboard Navigation
+  </a>
+
+	<div class="dashboard-nav">
+		<div class="dashboard-nav-inner">
+			<ul data-submenu-title="Account">
+				<li><a href="#"><i class="sl sl-icon-settings"></i> Profile</a></li>
+				<li class="active"><a href="#"><i class="sl sl-icon-envelope-open"></i> Sites</a></li>
+			</ul>
 		</div>
-
-
-    <div class="col-md-4">
-      <h1>Sites</h1>
-      <hr />
-      <ol>
-        {{#sites}}
-        <li><a href="/admin/{{slug}}">{{name}}</a></li>
-        {{/sites}}
-      </ol>
-    </div>
-
 	</div>
 
-  <script type="text/javascript" src="/js/jquery.js"></script>
-	<script type="text/javascript" src="/js/mustache.js"></script>
-  <script type="text/javascript">
+	<div class="dashboard-content">
 
-  </script>
+		<!-- Titlebar -->
+		<div id="titlebar">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Bookmarks</h2>
+					<!-- Breadcrumbs -->
+					<nav id="breadcrumbs">
+						<ul>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Dashboard</a></li>
+							<li>Bookmarks</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+
+			<!-- Listings -->
+			<div class="col-lg-12 col-md-12">
+				<div class="dashboard-list-box margin-top-0">
+					<h4>Bookmarked Listings</h4>
+					<ul>
+
+            {{#sites}}
+						<li>
+							<div class="list-box-listing">
+								<div class="list-box-listing-img"><a href="#"><img src="images/listing-item-02.jpg" alt=""></a></div>
+								<div class="list-box-listing-content">
+									<div class="inner">
+										<h3>Sticky Band</h3>
+										<span>Bishop Avenue, New York</span>
+										<div class="star-rating" data-rating="5.0">
+											<div class="rating-counter">(23 reviews)</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="buttons-to-right">
+								<a href="#" class="button gray"><i class="sl sl-icon-close"></i> Delete</a>
+							</div>
+						</li>
+            {{/sites}}
+
+					</ul>
+				</div>
+			</div>
+
+      {{>footer}}
+		</div>
+	</div>
+
+</div>
+
+
+</div>
+
+  <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+  <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 </body>
 </html>
