show template category

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -62,7 +62,7 @@
 								<div class="list-box-listing-content">
 									<div class="inner">
 										<h3>{{name}}</h3>
-										<span>{{category}}</span>
+										<span>{{template.category}}</span>
 									</div>
 								</div>
 							</div>
