link to admin pages

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -70,8 +70,8 @@
 								</div>
 							</div>
 							<div class="buttons-to-right">
-								<a href="/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Pages</a>
-                <a href="/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
+								<a href="/admin/pages/{{slug}}" class="button"><i class="sl sl-icon-close"></i> Pages</a>
+                <a href="/admin/cms/{{slug}}" class="button"><i class="sl sl-icon-close"></i> CMS</a>
 							</div>
 						</li>
             {{/sites}}
