--- a/views/account.mustache
+++ b/views/account.mustache
@@ -3,7 +3,7 @@
   {{>head}}
   <style>
     .list-box-listing-img {
-      width: 96px !important;
+      max-width: 96px !important;
     }
   </style>
 </head>
