--- a/views/account.mustache
+++ b/views/account.mustache
@@ -31,27 +31,11 @@
 
 	<div class="dashboard-content">
 
-		<!-- Titlebar -->
-		<div id="titlebar">
-			<div class="row">
-				<div class="col-md-12">
-					<h2>Sites</h2>
-					<!-- Breadcrumbs -->
-					<nav id="breadcrumbs">
-						<ul>
-							<li><a href="#">Home</a></li>
-							<li>Bookmarks</li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-
 		<div class="row">
 
-			<div class="col-lg-12 col-md-12">
+			<div class="col-lg-9 col-md-9">
 				<div class="dashboard-list-box margin-top-0">
-					<h4>Bookmarked Listings</h4>
+					<h4>Manage Your Sites</h4>
 
 					<ul>
             {{#sites}}
